--- a/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
+++ b/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
@@ -59,16 +59,16 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="./cat0.jpg" alt="Cuties First">
+        <img src="./shabani0.jpg" alt="Cuties First">
       </div>
       <div class="item">
-        <img src="./cat1.jpg" alt="Cuties Second">
+        <img src="./shabani1.jpg" alt="Cuties Second">
       </div>
       <div class="item">
-        <img src="./cat2.jpg" alt="Cuties Third">
+        <img src="./shabani2.jpg" alt="Cuties Third">
       </div>
       <div class="item">
-        <img src="./cat3.png" alt="Cuties Forth">
+        <img src="./shabani3.png" alt="Cuties Forth">
       </div>
     </div>
 
