--- a/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
+++ b/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
@@ -68,7 +68,7 @@
         <img src="./shabani2.jpg" alt="Cuties Third">
       </div>
       <div class="item">
-        <img src="./shabani3.jpg" width="460" height="600" alt="Cuties Forth">
+        <img src="./shabani3.jpg" style="width:460px;height: 600px" alt="Cuties Forth">
       </div>
     </div>
 
